调整工具调用
- 让 Claude Code 重写了局部调用工具，提高了调用成功率
- 统一格式化工具调用前和成功调用后的显示文本